2002-10-18  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (normalize_sender): New fuction, moved from
	tmda-rfilter.
	
	* Defaults.py (AUTORESPONSE_INCLUDE_SENDER_COPY): New variable.

	(TEMPLATE_EMAIL_HEADERS): Ditto.
	(TEMPLATE_ENCODED_HEADERS): Ditto.

	* AutoResponse.py: New file.

2002-10-04  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Defaults.py (MESSAGE_TAG_HEADER_STYLE): New variable.

2002-10-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib/email: Sync up with email 2.4.

2002-09-30  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (sendmail): Accept a whole message string rather than
	header and body strings as two separate arguments.

	(body_as_raw_string): New function.
	(headers_as_list): Ditto.
	(headers_as_raw_string): Ditto.
	(headers_as_string): Ditto.
	(rename_headers): Ditto.
	
	* Deliver.py: Use an email.Message object rather than an
	rfc822.Message object and message body.

	* MTA.py: Ditto.

	* MessageLogger.py: Ditto.

2002-09-26  Tim Legant  <tim@catseye.net>

	* FilterParser.py (FilterParser.__expandmacros): Fixed bug where
	more than one instance of the same macro in a rule failed
	miserably.

2002-09-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (decode_header): New function.

2002-09-12  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* Util.py (formataddr): Remove function.

	(make_date): Utilize email.Utils.formatdate().

2002-09-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* pythonlib: New directory to house any overrides of standard
	modules and packages.

	* pythonlib/email: Add version 2.3 of the `email' package.

2002-08-29  <sen_ml@eccosys.com>

	* FilterParser.py: Make the parser recognize the "hold" action by
	adding "hold" to in_action.

	* Defaults.py: Added documentation for "hold" action to
	ACTION_INCOMING, ACTION_FAIL_DATED, ACTION_EXPIRED_DATED,
	ACTION_FAIL_SENDER, ACTION_FAIL_KEYWORD.
